# Transformer-Implementation

./: .gitignore  Decoder.py  EarlyStop.py  Encoder.py  README.md  data_tokenize.py  demo.py  main.py  pred.py  pyproject.toml  tokenizer.pkl
data/: raw_data.csv
data_raw/: raw_data.csv
docs/source/: conf.py  index.rst
src/transformerimplementation/: __init__.py  __main__.py  settings.py
tests/: test_run.py
