[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "kedro-datasets>=5.0.0",
    "kedro-viz>=10.0.0",
    "kedro>=0.19.9",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.4.1",
]
